Completed game logic

--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css" type="text/css">
     <title>Rock, Paper, Scissors</title>
 </head>
 <body>
-    
+    <div class="wrapper">
+        <div class="flex-container">
+            <div class="flex-item" id="rock">
+                <img src="./img/rock.jpg" alt="Rock">
+            </div>
+            <div class="flex-item" id="paper">
+                <img src="./img/paper.jpg" alt="Paper">
+            </div>
+            <div class="flex-item" id="scissors">
+                <img src="./img/scissors.jpg" alt="Scissors">
+            </div>
+        </div>
+        <div class="btn" id="btn-start"><p>Let's start</p></div>
+    </div>
+    <script src="./js/script.js"></script>
 </body>
 </html>
