--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="flex-container">
+        <div class="flex-container" id="container">
             <div class="flex-item" id="rock">
                 <img src="./img/rock.jpg" alt="Rock">
             </div>
