Basic UI features added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 </head>
 <body>
     <div class="wrapper">
+        <div class="scoreboard">
+            <h2>Score</h2>
+            <p>Player: <span id="player-span">0</span></p>
+            <p>Computer: <span id="computer-span">0</span></p>
+        </div>
+        <div id="msg-div">
+            <h2 id="msg-text"></h2>
+        </div>
         <div class="flex-container" id="container">
             <div class="flex-item" id="rock">
                 <img src="./img/rock.jpg" alt="Rock">
